sync: 同步进度
