# src/openapi.yaml
@@ -12,8 +12,9 @@ paths:
       deprecated: false
       operationId: apiWallpaperVerticalGET
       parameters:
-      - description: 'Enum: "girl" "animal" "landscape" "anime" "drawn" "mechanics"
-          "boy" "game" "text"'
+      - description: 壁纸分类[girl, animal, landscape, anime, drawn, mechanics, boy, game,
+          text]
+        example: girl
         explode: true
         in: query
         name: category
@@ -21,7 +22,8 @@ paths:
         schema:
           type: string
         style: form
-      - example: "20"
+      - description: 要获取几张
+        example: "20"
         explode: true
         in: query
         name: limit
@@ -29,7 +31,8 @@ paths:
         schema:
           type: integer
         style: form
-      - example: "0"
+      - description: 从第几张开始
+        example: "0"
         explode: true
         in: query
         name: skip
@@ -37,7 +40,8 @@ paths:
         schema:
           type: integer
         style: form
-      - example: "true"
+      - description: '[true, false]'
+        example: "true"
         explode: true
         in: query
         name: adult
@@ -45,7 +49,8 @@ paths:
         schema:
           type: boolean
         style: form
-      - example: hot
+      - description: 壁纸排序方式[hot, new]
+        example: hot
         explode: true
         in: query
         name: order
@@ -125,7 +130,7 @@ paths:
                 - detail
                 - headers
       security: []
-      summary: vertical
+      summary: 纵向壁纸
       tags:
       - Wallpaper
       x-apifox-folder: Wallpaper
@@ -137,8 +142,9 @@ paths:
       deprecated: false
       operationId: apiWallpaperWallpaperGET
       parameters:
-      - description: 'Enum: "girl" "animal" "landscape" "anime" "drawn" "mechanics"
-          "boy" "game" "text"'
+      - description: 壁纸分类[girl, animal, landscape, anime, drawn, mechanics, boy, game,
+          text]
+        example: girl
         explode: true
         in: query
         name: category
@@ -146,7 +152,8 @@ paths:
         schema:
           type: string
         style: form
-      - example: "20"
+      - description: 要获取几张
+        example: "20"
         explode: true
         in: query
         name: limit
@@ -154,7 +161,8 @@ paths:
         schema:
           type: integer
         style: form
-      - example: "0"
+      - description: 从第几张开始
+        example: "0"
         explode: true
         in: query
         name: skip
@@ -162,7 +170,8 @@ paths:
         schema:
           type: integer
         style: form
-      - example: "true"
+      - description: '[true, false]'
+        example: "true"
         explode: true
         in: query
         name: adult
@@ -170,7 +179,8 @@ paths:
         schema:
           type: boolean
         style: form
-      - example: hot
+      - description: 壁纸排序方式[hot, new]
+        example: hot
         explode: true
         in: query
         name: order
@@ -241,14 +251,14 @@ paths:
                 - detail
                 - headers
       security: []
-      summary: wallpaper
+      summary: 横向壁纸
       tags:
       - Wallpaper
       x-apifox-folder: Wallpaper
       x-apifox-status: developing
       x-run-in-apifox: https://apifox.com/web/project/4024988/apis/api-147954364-run
       x-eov-operation-handler: controllers/WallpaperController
-  /api/qrcode/:
+  /api/qrcode:
     get:
       deprecated: false
       operationId: apiQrcodeGET
@@ -354,7 +364,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_400_1'
           description: 网关错误
       security: []
-      summary: QRCode
+      summary: 二维码
       tags: []
       x-apifox-folder: ""
       x-apifox-status: developing
@@ -427,7 +437,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_400_1'
           description: 网关错误
       security: []
-      summary: Translate
+      summary: 百度翻译
       tags: []
       x-apifox-folder: ""
       x-apifox-status: developing
@@ -473,7 +483,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_400_1'
           description: 网关错误
       security: []
-      summary: Poisonous
+      summary: 毒鸡汤
       tags: []
       x-apifox-folder: ""
       x-apifox-status: developing
@@ -689,7 +699,7 @@ paths:
                 $ref: '#/components/schemas/inline_response_400_1'
           description: 网关错误
       security: []
-      summary: Hitokoto
+      summary: 一言
       tags: []
       x-apifox-folder: ""
       x-apifox-status: developing
@@ -700,8 +710,8 @@ paths:
       deprecated: false
       operationId: apiPixelArtPOST
       parameters:
-      - description: 调色板序号
-        example: "7"
+      - description: 调色板序号[0...11]
+        example: "0"
         explode: true
         in: query
         name: p
@@ -709,7 +719,7 @@ paths:
         schema:
           type: integer
         style: form
-      - description: 缩放比例
+      - description: 缩放比例[1...100]
         example: "25"
         explode: true
         in: query
@@ -718,7 +728,9 @@ paths:
         schema:
           type: integer
         style: form
-      - description: 颜色相似度算法
+      - description: 颜色相似度算法[CIE76, CIE94, CIE2000, Euclidean_1, Euclidean_2, Euclidean_3,
+          CMC]
+        example: CIE76
         explode: true
         in: query
         name: a
@@ -742,7 +754,7 @@ paths:
       responses:
         "200":
           content:
-            application/json:
+            '*/*':
               schema:
                 type: string
           description: 成功
@@ -771,11 +783,33 @@ paths:
                 $ref: '#/components/schemas/inline_response_400_1'
           description: 网关错误
       security: []
-      summary: Pixel-art
+      summary: 像素画
       tags: []
       x-apifox-folder: ""
       x-apifox-status: developing
       x-run-in-apifox: https://apifox.com/web/project/4024988/apis/api-147989769-run
+      x-eov-operation-handler: controllers/DefaultController
+  /api/KFC-Crazy-Thursday:
+    get:
+      deprecated: false
+      operationId: apiKFCCrazyThursdayGET
+      parameters: []
+      responses:
+        "200":
+          content:
+            '*/*':
+              schema:
+                properties: {}
+                type: object
+                x-apifox-orders: []
+                x-apifox-ignore-properties: []
+          description: 成功
+      security: []
+      summary: 疯狂星期四文案
+      tags: []
+      x-apifox-folder: ""
+      x-apifox-status: developing
+      x-run-in-apifox: https://apifox.com/web/project/4024988/apis/api-148130800-run
       x-eov-operation-handler: controllers/DefaultController
 components:
   requestBodies:
